# nimbus_pnp_demo

./: .gitignore  .gitmodules  .travis.yml  README.md
.github/workflows/: main.yml
box_detector/: CMakeLists.txt  package.xml
box_detector/include/box_detector/: box_detector.hpp
box_detector/launch/: allign_model.launch  box_detector.launch  pose_transform.launch  test.launch
box_detector/src/: allign_model.cpp  box_detector.cpp  box_detector_node.cpp  test.cpp  transformPose.cpp
doc/rosdoc/cloud/doc/: manifest.yaml
doc/rosdoc/kuka_control/: manifest.yaml
doc/rosdoc/kuka_control/html/: classiwtros_1_1iiwaMove.html  classiwtros_1_1schunkGripper.html  dir_52f9efe3f235279ad57c49e5202e1312.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_c074239dfa4f8ea76e96639cb3ebc66b.html  dir_c074239dfa4f8ea76e96639cb3ebc66b_dep.map  dir_c074239dfa4f8ea76e96639cb3ebc66b_dep.md5  dir_c38bc7317e649c202cdf141c2ab68024.html  dir_e97e0c8f5bfa46730b32b97a2ec3b3b4_dep.map  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  iiwa__manipulation_8h_source.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  main_8cpp.html  main_8cpp__incl.map  main_8cpp_source.html  manipulation_8cpp.html  namespaces.html  schunk__gripper_8h.html
doc/rosdoc/nimbus_cloud/html/: annotated.html  classcloudMean.html  classcloudMean__inherit__graph.md5  classes.html  classnimbus_1_1cloudFeatures-members.html  classnimbus_1_1cloudFeatures.html  classnimbus_1_1cloudFeatures__inherit__graph.map  classnimbus_1_1cloudFilter-members.html  classnimbus_1_1cloudFilter.html  classnimbus_1_1cloudKeypoints-members.html  classnimbus_1_1cloudKeypoints.html  classnimbus_1_1cloudKeypoints__inherit__graph.map  classnimbus_1_1cloudRecognition.html  classnimbus_1_1cloudRecognition__inherit__graph.map  cloud__features_8h__dep__incl.md5  cloud__features_8h__incl.map  cloud__features_8h_source.html  cloud__filter_8h.html  cloud__filter_8h__incl.md5  cloud__filter_8h_source.html  cloud__keypoints_8h__dep__incl.map  cloud__keypoints_8h__dep__incl.md5  cloud__keypoints_8h__incl.md5  cloud__keypoints_8h_source.html  cloud__mean_8h.html  cloud__mean_8h__dep__incl.map  cloud__mean_8h__incl.map  cloud__mean_8h__incl.md5  cloud__recognition_8h.html  cloud__recognition_8h__dep__incl.md5  cloud__recognition_8h__incl.map  cloud__recognition_8h_source.html  cloud__util_8cpp__incl.md5  cloud__util_8h__dep__incl.md5  cloud__util_8h__incl.map  cloud__util_8h__incl.md5  cloud__util_8h_source.html  dir_000005_000002.html  dir_215328921eab484b36743cfc578445c9_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  (+20 more)
doc/rosdoc/nimbus_detector/: manifest.yaml
doc/rosdoc/nimbus_detector/html/: classDetector-members.html  classDetector__inherit__graph.map  classDetector__inherit__graph.md5  classModelTraining-members.html  classModelTraining.html  classModelTraining__inherit__graph.md5  classcloudUtilities-members.html  classnimbus_1_1Filters-members.html  classnimbus_1_1Filters.html  classnimbus_1_1Recognition-members.html  classnimbus_1_1Recognition.html  classnimbus_1_1Recognition__inherit__graph.map  classnimbus_1_1Recognition__inherit__graph.md5  dir_3251626898e8770b9108d3943cc0b2b1_dep.map  dir_3251626898e8770b9108d3943cc0b2b1_dep.md5  dir_578d2225d9c0815b5e8889694bd3d32a.html  dir_578d2225d9c0815b5e8889694bd3d32a_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7332f51c2d747946884de428f3977e63.html  dir_7332f51c2d747946884de428f3977e63_dep.md5  dir_9898743bdcc6168fae082938f1986743.html  dir_9898743bdcc6168fae082938f1986743_dep.map  dir_9898743bdcc6168fae082938f1986743_dep.md5  dir_bca819d2f8a7a67bebedf60e7e63b812.html  dir_bca819d2f8a7a67bebedf60e7e63b812_dep.md5  features_8h.html  features_8h__dep__incl.map  features_8h__incl.map  files.html  filters_8h__dep__incl.map  filters_8h__dep__incl.md5  filters_8h__incl.map  filters_8h__incl.md5  functions_func.html  functions_type.html  globals_type.html  index-msg.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  (+16 more)
docs/: index.html  index.md
docs/rosdoc/kuka_control/html/: annotated.html  classes.html  classiwtros_1_1iiwaMove-members.html  classiwtros_1_1schunkGripper-members.html  classiwtros_1_1schunkGripper__inherit__graph.md5  dir_000003_000001.html  dir_000004_000002.html  files.html  (+21 more)
iwtros_msgs/: CMakeLists.txt  package.xml
kinect_detector/: CMakeLists.txt  package.xml
kinect_detector/include/kinect_detector/: features.h  filters.h  recognition.hpp  utilities.h
kinect_detector/include/kinect_detector/impl/: recognition.cpp
kinect_detector/launch/: model_test.launch
kinect_detector/src/: main.cpp  model_test.cpp  train_model.cpp  training_model_test.cpp
kuka_control/: CMakeLists.txt  package.xml
kuka_control/include/kuka_control/: iiwa_manipulation.h  schunk_gripper.h
kuka_control/launch/: control.launch
kuka_control/src/: manipulation.cpp
nimbus_cloud/: CMakeLists.txt  package.xml
nimbus_cloud/cfg/: cloudEdit.cfg  searchRadius.cfg
nimbus_cloud/include/nimbus_cloud/: cloud_edit.h  cloud_features.h  cloud_filter.h  cloud_keypoints.h  cloud_mean.h  cloud_recognition.h  cloud_util.h
nimbus_cloud/include/nimbus_cloud/impl/: cloud_recognition.cpp  cloud_util.cpp
nimbus_cloud/src/: cloud_edit.cpp  main.cpp  nimbus_io.cpp
nimbus_cloud/test/: box.pcd  box_0.pcd  box_1.pcd  cbox_side.pcd  juice_carton.pcd  lCube.pcd  lwCube.pcd  model1.pcd  univ_behind.pcd  wCube.pcd
nimbus_fh_detector/: CMakeLists.txt  package.xml
nimbus_fh_detector/include/nimbus_fh_detector/: features.h  filters.h  recognition.hpp  utilities.h
nimbus_fh_detector/include/nimbus_fh_detector/impl/: recognition.cpp
nimbus_fh_detector/src/: main.cpp  train_model.cpp  training_model_test.cpp
nimbus_gui/: CMakeLists.txt
nimbus_gui/src/: accept_pose.cpp
nimbus_gui/ui/: accept_pose.h  accept_pose.ui
nimbus_vfh_detector/: CMakeLists.txt  package.xml
pcl_object_detection_raw/: CMakeLists.txt  FindFLANN.cmake  README.md  training_data.h5  training_data.list
pcl_object_detection_raw/src/: vfh_detection.cpp  vfh_testing.cpp
(+349 files in other folders)
